# Agent-Specific-KV-Cache-Profiler

./: .dockerignore  .gitignore  2026-06-24-143948-building_an_agent_specific_kv_cache_profiler_with_langgraph_sglang_and_mlflow.org  AGENTS.md  Dockerfile.mlflow  Dockerfile.profiler  README.md  agents.md  compose.gpu.yaml  pyproject.toml
analysis/: README.md
configs/: local.example.toml  sglang.yaml  workflow.yaml
data_visualization/: README.md
data_visualization/figure_1/: README.md  environment.yml  figure1_fake_data.csv  figure1_fake_data_R.csv  figure1_python.py  figure1_r.R
data_visualization/figure_2/: README.md  figure2_fake_data.csv  figure2_fake_data_R.csv  figure2_python.py  figure2_r.R
data_visualization/figure_3/: README.md  figure3_fake_matrix.csv  figure3_fake_matrix_R.csv  figure3_python.py  figure3_r.R
data_visualization/figure_4/: README.md  figure4_fake_data.csv  figure4_fake_data_R.csv  figure4_python.py  figure4_r.R
data_visualization/figure_5/: README.md  figure5_fake_data.csv  figure5_fake_data_R.csv  figure5_python.py  figure5_r.R
docs/: install_docker_gpu_ubuntu.md  mvp.md  run_gpu_vm.md
experiments/: README.md
scripts/: check_docker_gpu.sh
sglang_instrumentation/: README.md
src/kv_cache_profiler/: __init__.py  analysis.py  cli.py  client.py  environment.py  mlflow_integration.py  schema.py  storage.py  workflow.py
tests/: test_client_workflow.py  test_schema.py
workflows/: __init__.py
workflows/kubernetes_aiops/: README.md
workflows/kvflow/: README.md  __init__.py  workflow.py
workflows/synthetic/: README.md
