[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-specific-kv-cache-profiler"
version = "0.1.0"
description = "Agent-specific KV-cache profiler for KVFlow-style LangGraph, SGLang, and MLflow experiments."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Boyang Yan" }
]
dependencies = []

[project.optional-dependencies]
langgraph = [
  "langgraph>=0.2",
]
mlflow = [
  "mlflow>=2.14",
]
analysis = [
  "pandas>=2.0",
  "pyarrow>=15.0",
]
dev = [
  "pytest>=8.0",
]
all = [
  "langgraph>=0.2",
  "mlflow>=2.14",
  "pandas>=2.0",
  "pyarrow>=15.0",
]

[project.scripts]
kv-cache-profiler = "kv_cache_profiler.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kv_cache_profiler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
